UPDATE - alteracao no nome de um heroi (j'onn j'onzz)

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           
             <section id="herois">
                 <div class="heroi">
-                    <h3>J'onn J'onzz/Caçador de Marte</h3>
+                    <h3>J'onn J'onzz - Caçador de Marte</h3>
                     <img class="jonn_noticia" src="imagens/joncaçador.jpg" alt="">
                     <p>É um marciano e um dos membros fundadores da Liga da Justiça. Ele é mentor e tio de Miss Marte.</p>
                 </div>
