UPDATE - alteracao no titulo de aliados para herois

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
         <section id="titulo_herois">
             <div id="aliados">
-                <h1>Aliados</h1>
+                <h1>Herois</h1>
             </div>
 
         </section>
