UPDATE - alteracao no nome de Alex Danvers

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <p>É um marciano e um dos membros fundadores da Liga da Justiça. Ele é mentor e tio de Miss Marte.</p>
                 </div>
               <div class="heroi">
-                  <h3>Alex Danvers/Sentinela</h3>
+                  <h3>Alex Danvers - Sentinela</h3>
                   <img class="alex_noticia" src="imagens/Alex_Danvers.webp" alt="">
                   <p>É uma bioengenheira e a antiga diretora do D.O.E.. Ela é a filha de Eliza Danvers e do falecido Jeremiah Danvers. SuperGirlé sua irmã adotiva. Alex se tornou uma guardiã e aliada de sua irmã com o passar dos tempos.</p>
                 </div>
