UPDATE - alteracao no nome de nia

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                   <p>É uma bioengenheira e a antiga diretora do D.O.E.. Ela é a filha de Eliza Danvers e do falecido Jeremiah Danvers. SuperGirlé sua irmã adotiva. Alex se tornou uma guardiã e aliada de sua irmã com o passar dos tempos.</p>
                 </div>
               <div class="heroi">
-                  <h3>Nia Nal/Sonhadora</h3>
+                  <h3>Nia Nal - Sonhadora</h3>
                   <img class="nia_noticia" src="imagens/nianal.jpg" alt="">
                   <p>É uma híbrida humana-naltorina, uma repórter na CatCo Mídia Internacional e ex-redatora de discursos políticos. Depois da morte de sua mãe, Nia abraçou seus poderes e se tornou a super-heroína conhecida como Sonhadora. </p>
               </div>
