UPDATE - alteracao no nome de Querl Dox

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </section> 
             <section id="herois">
                 <div class="heroi">
-                    <h3>Querl Dox/Brainiac-5</h3>
+                    <h3>Querl Dox - Brainiac-5</h3>
                     <img class="nia_noticia" src="imagens/Querl_Dox.webp" alt="">
                     <p>É um coluano e antigo membro da Legião dos Super-Heróis. Ele é o namorado de Nia Nal e um amigo próximo de Kara Danvers, J'onn J'onzz, Alex Danvers, Lena Luthor e Kelly Olsen. Ele é um ser de intelecto nível 12 e um grande cientista e estrategista.</p>
                 </div>
