UPDATE - alteracao no nome de Kelly Olsen

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <p>É um coluano e antigo membro da Legião dos Super-Heróis. Ele é o namorado de Nia Nal e um amigo próximo de Kara Danvers, J'onn J'onzz, Alex Danvers, Lena Luthor e Kelly Olsen. Ele é um ser de intelecto nível 12 e um grande cientista e estrategista.</p>
                 </div>
                 <div class="heroi">
-                    <h3>Kelly Olsen/Guardiã</h3>
+                    <h3>Kelly Olsen - Guardiã</h3>
                     <img class="nia_noticia" src="imagens/guardia.webp" alt="">
                     <p>É uma psicóloga brilhante especializada em trauma e ex-soldado do Exército dos EUA. Cansada de ver a comunidade sendo ignorada, Kelly decidiu lutar por eles e se tornou a Guardiã.</p>
                 </div>
